# ann-research

./: .gitattributes  .gitignore  BRANCH_PROTECTION.md  CONTRIBUTING.md  INDEX.md  LICENSE  Makefile  README.md  go.mod
.github/: CODEOWNERS  pull_request_template.md
cmd/vault/: main.go
dead-ends/: DE-2026-04-28-001-premature-mapping-table.md
decisions/: D-2026-04-28-001-vault-substrate-design.md  D-2026-04-28-002-repo-structure-tooling.md  D-2026-04-28-003-branch-protection-workflow.md  D-2026-04-28-004-working-agreement-no-premature-integration.md  D-2026-04-28-005-trace-target-five-lm-no-threading.md  D-2026-04-28-006-assistant-direct-push-via-scoped-token.md  D-2026-04-28-007-pr-activity-summary-comment-required.md  D-2026-04-28-008-admin-bypass-merge-pattern.md  D-2026-04-28-009-program-objectives-and-research-strategy.md  D-2026-04-28-010-hybrid-superstructure-with-llm-language-plugin.md  D-2026-04-28-011-vjepa-as-candidate-visual-faculty.md  D-2026-04-30-012-foundational-assumption-unifying-architectural-framework.md
observations/: OBS-2026-04-28-001-monty-five-lm-vote-topology.md  OBS-2026-04-28-002-monty-matching-step-pipeline.md  OBS-2026-04-28-003-mdemg-subsystem-orientation-map.md  OBS-2026-04-28-004-mdemg-forward-direction-and-successor-framework.md
questions/: Q-2026-04-28-001-monty-3d-geometry-loadbearing.md  Q-2026-04-28-002-symbolic-hypothesis-space.md  Q-2026-04-28-003-mdemg-eta-empirical-grounding.md  Q-2026-04-28-004-motor-system-receives-only-first-sm.md  (+10 more)
sidecar/: README.md  pyproject.toml
sidecar/ann_research/: __init__.py
(+19 files in other folders)
